--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/barcode-scanner": "^5.5.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.4.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-plugin-geolocation": "4.0.1",
+    "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "mapbox-gl": "^0.54.0",
     "phonegap-plugin-barcodescanner": "8.0.1",
@@ -62,7 +66,9 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
