--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@ionic-native/barcode-scanner": "^5.5.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.5.1",
+    "@ionic-native/paypal": "^5.6.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.4.0",
     "@ionic/storage": "^2.2.0",
+    "com.paypal.cordova.mobilesdk": "3.5.0",
     "cordova-plugin-geolocation": "4.0.1",
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
@@ -68,7 +70,8 @@
     "plugins": {
       "phonegap-plugin-barcodescanner": {},
       "cordova-plugin-geolocation": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "com.paypal.cordova.mobilesdk": {}
     }
   }
 }
