--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "com.paypal.cordova.mobilesdk": "3.5.0",
     "cordova-android": "7.1.4",
     "cordova-browser": "6.0.0",
+    "cordova-ios": "5.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -92,7 +93,8 @@
     },
     "platforms": [
       "android",
-      "browser"
+      "browser",
+      "ios"
     ]
   }
 }
