--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/barcode-scanner": "^5.6.0",
     "@ionic-native/core": "^5.6.0",
     "@ionic-native/geolocation": "^5.6.0",
+    "@ionic-native/onesignal": "^5.6.1",
     "@ionic-native/paypal": "^5.6.0",
     "@ionic-native/splash-screen": "^5.6.0",
     "@ionic-native/status-bar": "^5.6.0",
@@ -43,6 +44,7 @@
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.6.8",
     "mapbox-gl": "^0.54.0",
+    "onesignal-cordova-plugin": "2.4.7",
     "phonegap-plugin-barcodescanner": "8.0.1",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
@@ -89,7 +91,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android",
